# CareerCopilot_AI

./: .env.example  .gitattributes  .gitignore  Procfile  README.md  ats_jobs_report.md  pyproject.toml  requirements.txt  webs.txt
api/: main.py
frontend/: index.html  script.js  style.css
matchforge_ai/: README.md  pyproject.toml  requirements.txt
matchforge_ai/api/: main.py
matchforge_ai/frontend/: index.html
matchforge_ai/src/matchforge_ai/: crew.py
src/career_copilot_ai/: crew.py  main.py
src/career_copilot_ai/config/: agents.yaml  tasks.yaml
src/career_copilot_ai/tools/: custom_tool.py
src/matchforge_ai/: main.py  utils.py
