[project]
name = "matchforge_ai"
version = "0.1.0"
description = "MatchForge AI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.13.0"
]

[project.scripts]
matchforge_ai = "matchforge_ai.main:run"
run_crew = "matchforge_ai.main:run"
train = "matchforge_ai.main:train"
replay = "matchforge_ai.main:replay"
test = "matchforge_ai.main:test"
run_with_trigger = "matchforge_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
